    - fixed a bug that could cause parse error with quotes inside literal
      blocks. (Andrei,  Alexander Belonosov)
    - added 'field_array' attribute to html_select_time function. (Andrei,
      Michael Caplan)
    - added {section} "max" attribute to docs (Monte)
    - fixed notice message in Smarty_Compiler.class.php (Monte)
    - fixed bug with clear_cache introduced in 1.4.6, third parameter should be
      null (Monte)
    - updated Config_File.class.php for "\" support in OS/2 (Monte, Francesco
      Ciprianii)
    - removed secure_ext setting (not used) (Monte)
    - made cache reading process more efficient. (Monte)
    - fixed bug, is_cached() now supports new 1.4.6 caching behavior. (Monte)
    - update FAQ with mailing list Reply-To header FAQ. (Monte)
    - supress error messages for fopen(), fix cache to regenerate if cache
      file is not available (i.e. cluster race condition). (Monte)
    - added index key example to QUICKSTART guide. (Monte)

Version 1.4.6
-------------
    - fixed bug with {assign ...} when passing an empty value. (Monte)
    - add more warning message fixes. (Monte, Tara Johnson)
    - documentation updates. (Monte)
    - update fetch function to give proper warning when fetching a non-readable
      or non-existant file. (Monte)
    - fixed problem with newline at the end of included templates (Monte, Andrei)
    - added feature to regenerate cache if compile_check is enabled and an
      involved template or config file gets modified. (Monte)
    - added DEBUG execution times to included files: REQUIRES updated debug.tpl
      file! (Monte)
    - added support for hidden config variables that cannot be read by
      templates. (Andrei)
    - added execution time to DEBUG console, total and inserts. (Monte)
    - fixed bug where DEBUG console would not appear with cached content. (Monte)
    - added support for postfilter functions that are applied to compiled
      template right after compilation. (Andrei)